# acl2-mcp

./: .gitignore  AGENTS.md  CHANGES.md  CLAUDE.md  INSTALL.remote-tmux-emacs.md  LICENSE  README-CLAUDE-CODE-SECURITY-TIPS.md  README.md  SECURITY.md  pyproject.toml  test_pty.py  tool-doc.md
.claude/: settings.local.json
.claude/skills/acl2-doc-lookup/: SKILL.md
.claude/skills/acl2-session-start/: SKILL.md
acl2_mcp/: acl2-wrapper.sh  config.py  server.py
docs/: architecture.md
for-agents/: AGENTS.md
for-agents/.claude/skills/acl2-doc-lookup/: SKILL.md
tests/: __init__.py  test_config.py  test_security.py  test_server.py  test_sessions.py
